<resources>
    <string name="app_name">Stokes</string>
    <string name="log_in_tittle">Inicio de Sesion</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_log_in">Ingresar</string>
    <string name="label_register">¿Aun no te has registrado?</string>
    <string name="sub_tittle_label">Ingresa los datos para iniciar sesion</string>
    <string name="label_register_tittle">Registro</string>
    <string name="label_register_subTittle">Ingresa los datos que se le solicitan</string>
    <string name="label_register_fullName">Nombre Completo</string>
    <string name="btn_register">Darme de alta</string>
    <string name="label_register_log_in">¿Ya tienes una cuenta? Inicia Sesion Aqui</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">RESERVAR CITA</string>
    <string name="btn_my_appointments">MIS CITAS</string>
    <string name="btn_log_out">CERRAR SESIÓN</string>
    <string name="stokes_welcome">Bienvenido</string>
    <string name="welcome_message_log_in">Sesión iniciada con exito</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripcion</string>
    <string name="label_type">Tipo de Cita</string>
    <string name="label_specialty">Especialidad</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operacion</string>
    <string name="btn_next">Siguiente </string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">"Cita medica # %1$d"</string>
    <string name="item_appointment_date">"el dia: %1$s"</string>
    <string name="item_appointment_time">"a las: %1$s"</string>
    <string name="label_my_appointments">Mis citas medicas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estas seguro de que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el formulario, los datos que has ingresado se pierden.</string>
    <string name="dialog_create_appointment_positive_button">Si, salir</string>
    <string name="dialog_create_appointment_negative_button">Continuar registro</string>
    <string name="validate_appointment_description">La descripcion es demasiada corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_appointment_data">Confirmar datos de la cita</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="validate_appointment_date">Selecciona una fecha valida</string>
    <string name="validate_appointment_time">Selecciona una hora valida</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
