<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:text="@string/stokes_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:text="Freddy Marroquin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

    <LinearLayout
        android:background="@drawable/vector_gradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="12dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCreateAppointment"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:drawableStart="@drawable/ic_add_circle"
            style="@style/menu_button"
            android:text="@string/btn_create_appointment" />


        <Button
            android:id="@+id/btnMyAppointments"
            android:layout_width="match_parent"
            android:layout_marginTop="22dp"
            android:drawableStart="@drawable/ic_access_time"
            style="@style/menu_button"
            android:text="@string/btn_my_appointments" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_marginTop="200dp"
            android:drawableLeft="@drawable/ic_power_off"
            style="@style/menu_button"
            android:text="@string/btn_log_out" />

        <TextView
            android:id="@+id/tvGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="18dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="¿Necesitas ayuda?"/>

    </LinearLayout>


</LinearLayout>